--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,10 @@ li {
   align-items: center;
   justify-content: center;
 }
+.redCls{
+  color:red;
+  font-size: 50px;
+}
+.blueCls{
+  color:blue;
+}
